#*******************************************************************************
# Copyright (c) 2012 Sierra Wireless and others.
# All rights reserved. This program and the accompanying materials
# are made available under the terms of the Eclipse Public License v1.0
# which accompanies this distribution, and is available at
# http://www.eclipse.org/legal/epl-v10.html
#
# Contributors:
#     Sierra Wireless - initial API and implementation
#*******************************************************************************

project (CLIBS)
add_subdirectory (common)
add_subdirectory (luasignal)
add_subdirectory (bysant)
add_subdirectory (SerialFramework)
add_subdirectory (libtommath)
add_subdirectory (libtomcrypt)
add_subdirectory (keystore)
add_subdirectory (cdb)
add_subdirectory (yajl)

